test/error/utf8_identifier.lua
local a = 12;
local è = 12;
